# cricket-bot

./: .gitignore  Dockerfile  README.md  bot.py  configuration.example.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
Utilities/format/: __init__.py  view.py
Utilities/image/: image.py
Utilities/imgflip/: __init__.py  imgflip.py  imgflip_bot_wrapper.py
Utilities/minecraft/: minecraft.py
Utilities/splatoon/: __init__.py  splatfest.py  splatoon3ink.py
Utilities/text/: autoresponder.json
Utilities/web/: requests.py
cogs/: Bot.py  Deepmoji.py  Discord.py  Fun.py  Imagegen.py  Minecraft.py  Response.py  Utilities.py  admin.py  autoresponder.py  button_roles.py  errorHandler.py  images.py  meta.py  slash_cog.py  snipe.py  splatfest.py  text.py
cogs/utils/: cooldown.py  deepmoji.py  embed.py  image.py  imgflip.py  minecraft.py  splatoon3ink.py  view.py
cogs/utils/api/: deepmoji.py  imgflip.py
static/text/: wah.txt
text/: 123.txt  1234.txt  1235.txt  1236.txt
