[tool.poetry]
name = "cricket-bot"
version = "0.2.0"
description = "A simple Discord bot with a variety of unusal functions"
authors = ["Sam <akamitsunami@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.1.1"
mcstatus = "^9.4.1"
Pillow = "^9.2.0"
aiohttp = "^3.8.1"
text-to-owo = "^2.0.1"
numpy = "^1.23.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
